Implemented Remaining pages

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 EXPO_PUBLIC_GOOGLE_MAP_KEY=AIzaSyDS3aDJjFgL6E1ZhpyQY7HZhJkp0cMa-GQ
-
-EXPO_PUBLIC_GOOGLE_GEMINI_API_KEY = AIzaSyCtw8tFQWJ3dkZuDc15b3uYYtzqJbFyfF4
+EXPO_PUBLIC_GOOGLE_GEMINI_API_KEY=AIzaSyCtw8tFQWJ3dkZuDc15b3uYYtzqJbFyfF4
